Fixed bug with links in portfolio

--- a/views/port.handlebars
+++ b/views/port.handlebars
@@ -15,9 +15,8 @@
             D&D characters in a mobile-friendly interface. Campaign, convention, meetup - no matter where, you can share
             and play all your characters with other D&D players.</p>
         </div>
-        <div class="card-body text-center">
-          <a href="#" class="card-link" id="demo">Demo</a>
-          <a href="#" class="card-link" id="code">Code</a>
+        <div class="card-body text-center" id="links">
+          
         </div>
       </div>
     </div>
@@ -66,4 +65,4 @@
   </div>
 </div>
 
-<script src="/assets/scripts/port.js"></script>
+<script src="./assets/scripts/port.js"></script>
