Updated title and information in the experience section

--- a/views/exp.handlebars
+++ b/views/exp.handlebars
@@ -6,7 +6,7 @@
         <li>
           <ul>
             <li><strong><u>
-                  <h5>Implementation Specialist</h5>
+                  <h5>Implementation Software Engineer</h5>
                 </u></strong></li>
             <li>Cincinnati Time Recorder of Maine (CTR Maine)</li>
             <li>March 2015 - Present</li>
@@ -15,6 +15,7 @@
                 <li>Writing SQL Queries for custom reports that clients need</li>
                 <li>Client Relations and Rententions</li>
                 <li>Python Scripts to convert file formats into compatiable formats</li>
+                <li>Node JS application using Electron for desktop application</li>
               </ul>
             </li>
           </ul>
