--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,14 +29,34 @@
           <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
             aria-valuemax="100"></div>
         </div>
+        Node JS:
+        <div class="progress mt-2">
+          <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80"
+            aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
         Python:
         <div class="progress mt-2">
           <div class="progress-bar bg-warning" role="progressbar" style="width: 55%" aria-valuenow="55"
             aria-valuemin="0" aria-valuemax="100"></div>
         </div>
-        Node JS:
+         Microsoft SQL:
         <div class="progress mt-2">
-          <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80"
+          <div class="progress-bar bg-info" role="progressbar" style="width: 70%" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        GIT:
+        <div class="progress mt-2">
+          <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80"
+            aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        Visual Code:
+        <div class="progress mt-2">
+          <div class="progress-bar bg-info" role="progressbar" style="width: 90%" aria-valuenow="90"
+            aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+         MySQL:
+        <div class="progress mt-2">
+          <div class="progress-bar bg-info" role="progressbar" style="width: 90%" aria-valuenow="90"
             aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </div>
