--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
             <div class="card-body">
               <h4 class="card-title">Full Stack Developer</h4>
               <p class="card-text">Node JS, Express JS, Passport JS,HTML 5, Handlebars</p>
-              <a type="button" href="/port" class="btn btn-info">See Portfolio</a>
+              <a type="button" href="/port" class="btn btn-warning">See Portfolio</a>
             </div>
           </div>
         </div>
@@ -46,17 +46,17 @@
         </div>
         GIT:
         <div class="progress mt-2">
-          <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80"
+          <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80"
             aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         Visual Code:
         <div class="progress mt-2">
-          <div class="progress-bar bg-info" role="progressbar" style="width: 90%" aria-valuenow="90"
+          <div class="progress-bar bg-warning" role="progressbar" style="width: 90%" aria-valuenow="90"
             aria-valuemin="0" aria-valuemax="100"></div>
         </div>
          MySQL:
-        <div class="progress mt-2">
-          <div class="progress-bar bg-info" role="progressbar" style="width: 90%" aria-valuenow="90"
+        <div class="progress mt-2 mb-3">
+          <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90"
             aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </div>
