--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
             <div class="card-body">
               <h4 class="card-title">Full Stack Developer</h4>
               <p class="card-text">Node JS, Express JS, Passport JS,HTML 5, Handlebars</p>
-              <a type="button" href="/port" class="btn btn-warning">See Portfolio</a>
+              <a href="/port" class="btn btn-warning">See Portfolio</a>
             </div>
           </div>
         </div>
